Fix modal overlay z-index bug (#405)

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -90,3 +90,8 @@ select {
   appearance: none;
   width: 100%;
 }
+
+#overlay {
+  position: relative;
+  z-index: 1000;
+}
